--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
 Flask==3.1.2
+ipython==9.8.0
+kornia==0.8.2
+matplotlib==3.10.8
+numpy==2.4.0
+pillow==12.0.0
+pycocotools==2.0.11
+pytorch-lightning==2.6.0
+tensorboard==2.20.0
+torch==2.9.1
+torchmetrics==1.8.2
+torchvision==0.24.1
+tqdm==4.67.1
+urllib3==2.6.2
