--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ app/assets/lightning_logs/
 app/assets/masked.jpg
 app/assets/original.jpg
 app/assets/output.jpg
+app/assets/seg_models/
 
 app/src/__pycache__/
