--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,9 @@ tensorboard==2.20.0
 torch==2.9.1
 torchmetrics==1.8.2
 torchvision==0.24.1
+torchinfo==1.8.0
+segmentation_models_pytorch==0.5.0
 tqdm==4.67.1
 urllib3==2.6.2
+albumentations==2.0.8
+opencv-python==4.12.0.88
