--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==3.1.2
 ipython==9.8.0
 kornia==0.8.2
 matplotlib==3.10.8
-numpy==2.4.0
+# numpy==2.4.0
 pillow==12.0.0
 pycocotools==2.0.11
 pytorch-lightning==2.6.0
